<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:clickable="true"
    android:focusable="true"
    android:padding="@dimen/paddingMedium">

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="@dimen/noPadding"
        android:layout_height="@dimen/noPadding"
        android:contentDescription="@string/album_desc"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/nextButton"
        app:layout_constraintStart_toStartOf="@+id/prevButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/strangers_cover_art" />

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/default_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textLarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/albumCover" />

    <TextView
        android:id="@+id/artists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/default_artist"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songTitle" />

    <TextView
        android:id="@+id/playCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/textSmall"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artists" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/play_desc"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/nextButton"
        app:layout_constraintStart_toEndOf="@+id/prevButton"
        app:layout_constraintTop_toBottomOf="@+id/playCount"
        app:srcCompat="@drawable/ic_play" />

    <ImageButton
        android:id="@+id/prevButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/prev_desc"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playButton"
        app:srcCompat="@drawable/ic_previous" />

    <ImageButton
        android:id="@+id/nextButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/next_desc"
        android:foreground="?android:attr/selectableItemBackground"
        android:scaleType="centerInside"
        android:src="@drawable/ic_next"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton" />

</androidx.constraintlayout.widget.ConstraintLayout>